// Original file: src/proto/auth.proto


export interface GeoData {
  'status'?: (string);
  'message'?: (string);
  'continent'?: (string);
  'continentCodes'?: (string);
  'country'?: (string);
  'countryCode'?: (string);
  'region'?: (string);
  'regionName'?: (string);
  'city'?: (string);
  'zip'?: (string);
  'lat'?: (string);
  'lon'?: (string);
  'timezone'?: (string);
  'offset'?: (string);
  'currency'?: (string);
  'isp'?: (string);
  'org'?: (string);
  'as'?: (string);
  'asname'?: (string);
  'reverse'?: (string);
  'mobile'?: (string);
  'proxy'?: (string);
  'hosting'?: (string);
  'query'?: (string);
  '_status'?: "status";
  '_message'?: "message";
  '_continent'?: "continent";
  '_continentCodes'?: "continentCodes";
  '_country'?: "country";
  '_countryCode'?: "countryCode";
  '_region'?: "region";
  '_regionName'?: "regionName";
  '_city'?: "city";
  '_zip'?: "zip";
  '_lat'?: "lat";
  '_lon'?: "lon";
  '_timezone'?: "timezone";
  '_offset'?: "offset";
  '_currency'?: "currency";
  '_isp'?: "isp";
  '_org'?: "org";
  '_as'?: "as";
  '_asname'?: "asname";
  '_reverse'?: "reverse";
  '_mobile'?: "mobile";
  '_proxy'?: "proxy";
  '_hosting'?: "hosting";
  '_query'?: "query";
}

export interface GeoDataOutput {
  'status'?: (string);
  'message'?: (string);
  'continent'?: (string);
  'continentCodes'?: (string);
  'country'?: (string);
  'countryCode'?: (string);
  'region'?: (string);
  'regionName'?: (string);
  'city'?: (string);
  'zip'?: (string);
  'lat'?: (string);
  'lon'?: (string);
  'timezone'?: (string);
  'offset'?: (string);
  'currency'?: (string);
  'isp'?: (string);
  'org'?: (string);
  'as'?: (string);
  'asname'?: (string);
  'reverse'?: (string);
  'mobile'?: (string);
  'proxy'?: (string);
  'hosting'?: (string);
  'query'?: (string);
  '_status': "status";
  '_message': "message";
  '_continent': "continent";
  '_continentCodes': "continentCodes";
  '_country': "country";
  '_countryCode': "countryCode";
  '_region': "region";
  '_regionName': "regionName";
  '_city': "city";
  '_zip': "zip";
  '_lat': "lat";
  '_lon': "lon";
  '_timezone': "timezone";
  '_offset': "offset";
  '_currency': "currency";
  '_isp': "isp";
  '_org': "org";
  '_as': "as";
  '_asname': "asname";
  '_reverse': "reverse";
  '_mobile': "mobile";
  '_proxy': "proxy";
  '_hosting': "hosting";
  '_query': "query";
}
